--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "license": "GPL-3.0-or-later",
     "type": "module",
     "devDependencies": {
+        "@types/node": "^20.6.0",
         "vitepress": "^1.0.0-rc.11"
     },
     "scripts": {
