--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules
 .vitepress/**/*.*
 !.vitepress/theme/**/*.*
 !.vitepress/config.ts
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
